gcc/testsuite/gm2/errors/fail/badtype.mod
MODULE badtype ;

PROCEDURE bar (VAR a: CARDINAL) ;
TYPE
   Foo = a ;
BEGIN
END bar ;

BEGIN
END badtype.
